Fix shift modifier in Curve Selection Tool

The modifier of the point clicked the last should define the
selection mode. For selection tools we just disable shift+click
"path-close" shortcut of the base path tool

BUG:397932